# im-scale-convert

./: README.md  main.py  pyproject.toml
im_scale_convert/: __init__.py  cli.py  processing.py
